fixes, refactoring, comments added